# GAGeo

./: .gitignore  IMPLEMENTATION_SUMMARY.md  MASK_SUPPORT_SUMMARY.md  PROMPT_TRAINING_UPDATE.md  README.md  SLURM_GUIDE.md  ablation_tables.txt  analyze_ground_drone_similarity.py  analyze_ground_drone_tsne.py  cvoglseg_online_data.py  diagnose_pi3_correspondence_focus.py  evaluate_cmaloc.py  evaluate_custom_v2.py  evaluate_cvoglseg_online_v3.py  evaluate_zero_shot_ground_to_drone.py  install.sh  pyproject.toml  qualitative_compare_cvoglseg.py  qualitative_compare_university.py  qualitative_compare_v3_baselines.py  requirements.txt  run_cvoglseg_all_evals.py  run_test.sh  setup.py  test.py  test_detr.py  test_model.py  test_model_forward.py  train.py  train_accelerate.py  train_ddp.py  train_deepspeed.py  train_detr.py  train_detr_v2.py  train_detr_v2_ddp.py  train_ds.py  vggt.md  vis.py  vis_detr.py  visualize.py  (+3 more)
configs/: .default.yaml.swp  accelerate_deepspeed_tp.yaml  accelerate_deepspeed_zero2.yaml  cesium.yaml  default.yaml  default_v2.yaml  default_v3.yaml  gageo_dinov2_g14_cva.yaml  gageo_dinov2_vit_b16_joint.yaml  gageo_dinov2_vit_h14_joint.yaml  gageo_moco_q4096.yaml  gageo_pi3_frame_pos_cmaloc.yaml  gageo_vit_b16_cva.yaml  mixed_dataset.yaml  test.yaml
curope/: curope2d.py
data/: CESIUM_DATASET_README.md  DATA_PIPELINE.md  README.md  USAGE.md  __init__.py  dataset.py  single.json  single_cesium.json  test_samples.json
datasets/: __init__.py  cmaloc.py
docs/: 2D_GAGEO_ARCHITECTURE.md  ARCHITECTURE_V2.md  CHANGES_V2.md  CHANGES_V3.md  CLASSIFICATION_LOSS_DETAILED.md  IMPLEMENTATION_DETAILS_ECCV.md  IMPLEMENTATION_DETAILS_ECCV.tex  INPUT_EMBEDDING_DESIGN_CN.md  METHOD_SECTION_ECCV.tex  METHOD_SECTION_ECCV_CN.md  model_parameters.md  (+9 more)
(+191 files in other folders)
