[project]
name = "gageo"
version = "0.1.0"
description = "GAGeo training and evaluation code for CMA-Loc."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "torch==2.7.1+cu118",
    "torchvision==0.22.1+cu118",
    "accelerate==1.12.0",
    "transformers==5.1.0",
    "deepspeed==0.18.6",
    "numpy==2.4.2",
    "scipy==1.17.0",
    "Pillow==12.1.1",
    "opencv-python==4.13.0.92",
    "pycocotools==2.0.11",
    "PyYAML==6.0.3",
    "tqdm==4.67.3",
    "matplotlib==3.10.8",
    "tensorboard==2.20.0",
    "albumentations==2.0.8",
    "shapely==2.1.2",
    "wandb==0.26.1",
    "safetensors==0.7.0",
    "huggingface_hub==1.4.1",
]

[[tool.uv.index]]
name = "pytorch-cu118"
url = "https://download.pytorch.org/whl/cu118"
explicit = true

[tool.uv.sources]
torch = [
    { index = "pytorch-cu118" },
]
torchvision = [
    { index = "pytorch-cu118" },
]
